# btc-polymarket-bot

./: .env.example  .gitattributes  .gitignore  README.md  dev.ps1  dev.sh  pyproject.toml  requirements.txt  start.ps1  start.sh
backend/: config.py  main.py
backend/api/: routes.py  ws.py
backend/data/: market_finder.py  price_feed.py
backend/db/: store.py
backend/execution/: order_manager.py  position_tracker.py
backend/polymarket/: client.py  models.py
backend/strategy/: engine.py  paper.py  profit_guard.py  state.py
docs/: claude_code_kickoff_prompt.md  polymarket-api-reference.md  polymarket_btc_bot_implementation.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  ModeToggle.tsx  PositionTable.tsx  PriceChart.tsx  ProfitMeter.tsx  StrategyStatePanel.tsx  SystemHealth.tsx  TradeLog.tsx  WalletPanel.tsx
frontend/src/hooks/: useStrategyState.ts  useWebSocket.ts
frontend/src/types/: index.ts
tests/: conftest.py  test_activation.py  test_circuit_breaker.py  test_continuous.py  test_early_profit.py  test_emergency.py  test_entry.py  test_paper.py  test_profit_guard.py  test_s1.py  test_s2.py  test_s3a.py  test_s3b.py  test_s3c.py  test_settlement.py  test_websocket.py
